--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "axios": "^0.24.0",
     "browser-history": "^1.0.1",
     "browser-router": "^0.2.0",
+    "formik": "^2.2.9",
     "link-react": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "validator": "^13.7.0",
+    "web-vitals": "^2.1.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
